--- a/src/ui/angular/sensor-chart/src/index.html
+++ b/src/ui/angular/sensor-chart/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loanding...</app-root>
 </body>
 </html>
